[Sans Italic] CYR Kerning Update

--- a/sources/NotoSans-Italic.glyphspackage/fontinfo.plist
+++ b/sources/NotoSans-Italic.glyphspackage/fontinfo.plist
@@ -6926,6 +6926,11 @@ widthClass = 2;
 kerningLTR = {
 "4ABFEEF6-B0FE-443E-B48D-B4A70A3A2C9A" = {
 "@MMK_L_A.left" = {
+"@MMK_R_Che-cy" = -10;
+"@MMK_R_De-cy" = 30;
+"@MMK_R_Ef-cy" = -20;
+"@MMK_R_El-cy" = 20;
+"@MMK_R_Hardsign-cy.right" = -40;
 "@MMK_R_J.salt" = 30;
 "@MMK_R_O.right" = -20;
 "@MMK_R_T.right" = -50;
@@ -6940,9 +6945,10 @@ trademark = -30;
 v.sc = -20;
 };
 "@MMK_L_Be-cy" = {
-"@MMK_R_Che-cy" = -20;
+"@MMK_R_Che-cy" = -25;
 "@MMK_R_Cheabkhasian-cy" = -20;
 "@MMK_R_Ef-cy" = -10;
+"@MMK_R_U-cy" = -5;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -30;
 "@MMK_R_ha-cy" = -10;
@@ -6952,6 +6958,7 @@ v.sc = -20;
 "@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_C.left" = {
+"@MMK_R_Ef-cy" = -25;
 "@MMK_R_O.right" = -20;
 "@MMK_R_c.sc" = -20;
 "@MMK_R_guillemetleft" = -20;
@@ -7005,9 +7012,11 @@ v.sc = -10;
 "@MMK_R_quoteleft" = -10;
 };
 "@MMK_L_E.left" = {
+"@MMK_R_U-cy" = 15;
 J = 60;
 };
 "@MMK_L_Ef-cy" = {
+"@MMK_R_A.right" = -20;
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_De-cy" = -15;
 "@MMK_R_Dje-cy" = -20;
@@ -7019,6 +7028,7 @@ J = 60;
 "@MMK_R_Komizje-cy" = -20;
 "@MMK_R_Lje-cy" = -20;
 "@MMK_R_Paren.right" = -20;
+"@MMK_R_T.right" = -75;
 "@MMK_R_U-cy" = -60;
 "@MMK_R_Ustraight-cy" = -30;
 "@MMK_R_Ze-cy" = -20;
@@ -7395,8 +7405,10 @@ J = 60;
 "@MMK_L_Hardsign-cy" = {
 "@MMK_R_Che-cy" = -80;
 "@MMK_R_Ef-cy" = -10;
+"@MMK_R_El-cy" = -10;
 "@MMK_R_Ia-cy" = -10;
 "@MMK_R_Paren.right" = -10;
+"@MMK_R_T.right" = -100;
 "@MMK_R_U-cy" = -20;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -30;
@@ -7454,7 +7466,9 @@ v.sc = -30;
 };
 "@MMK_L_O.left" = {
 "@MMK_R_A.right" = -20;
+"@MMK_R_De-cy" = -5;
 "@MMK_R_Dze-cy" = -10;
+"@MMK_R_El-cy" = -10;
 "@MMK_R_J.salt" = -40;
 "@MMK_R_T.right" = -30;
 "@MMK_R_V.right" = -10;
@@ -7474,8 +7488,12 @@ question = 30;
 };
 "@MMK_L_P.left" = {
 "@MMK_R_A.right" = -50;
+"@MMK_R_El-cy" = -20;
 "@MMK_R_J.salt" = -120;
+"@MMK_R_U-cy" = -10;
 "@MMK_R_Z.right" = -10;
+"@MMK_R_Ze-cy" = -15;
+"@MMK_R_Zhe-cy" = -40;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -70;
 "@MMK_R_guillemetleft" = -10;
@@ -7485,10 +7503,16 @@ ampersand = -20;
 };
 "@MMK_L_T.left" = {
 "@MMK_R_A.right" = -50;
+"@MMK_R_Che-cy" = 5;
+"@MMK_R_De-cy" = -10;
+"@MMK_R_Ef-cy" = -65;
+"@MMK_R_El-cy" = -15;
 "@MMK_R_GRK_alpha.sc" = -30;
+"@MMK_R_Hardsign-cy.right" = 10;
 "@MMK_R_J.salt" = -90;
 "@MMK_R_O.right" = -20;
 "@MMK_R_T.right" = 10;
+"@MMK_R_Ze-cy" = 10;
 "@MMK_R_a.right" = -80;
 "@MMK_R_a.sc" = -30;
 "@MMK_R_ae.sc" = -30;
@@ -7521,11 +7545,12 @@ trademark = 60;
 "@MMK_R_underscore" = 0;
 };
 "@MMK_L_U-cy" = {
+"@MMK_R_A.right" = -10;
 "@MMK_R_Cheabkhasian-cy" = -20;
 "@MMK_R_De-cy" = -70;
 "@MMK_R_E-cy" = -10;
 "@MMK_R_Ef-cy" = -30;
-"@MMK_R_El-cy" = -80;
+"@MMK_R_El-cy" = -40;
 "@MMK_R_Ia-cy" = -30;
 "@MMK_R_J.salt" = -90;
 "@MMK_R_Komide-cy" = -70;
@@ -7675,6 +7700,7 @@ ampersand = -20;
 "@MMK_R_Ef-cy" = -40;
 "@MMK_R_Je-cy" = 20;
 "@MMK_R_Komide-cy" = -20;
+"@MMK_R_O.right" = -20;
 "@MMK_R_Paren.right" = 20;
 "@MMK_R_che-cy" = -30;
 "@MMK_R_eight" = -20;
@@ -8336,6 +8362,11 @@ x.sc = {
 };
 "9733853B-DD8E-49B4-939D-1F0D465E8B6E" = {
 "@MMK_L_A.left" = {
+"@MMK_R_Che-cy" = -20;
+"@MMK_R_De-cy" = 20;
+"@MMK_R_Ef-cy" = -20;
+"@MMK_R_El-cy" = 10;
+"@MMK_R_Hardsign-cy.right" = -50;
 "@MMK_R_J.salt" = 30;
 "@MMK_R_O.right" = -20;
 "@MMK_R_T.right" = -50;
@@ -8352,6 +8383,7 @@ v.sc = -20;
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_Cheabkhasian-cy" = -20;
 "@MMK_R_Ef-cy" = -10;
+"@MMK_R_U-cy" = -5;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -30;
 "@MMK_R_ha-cy" = -10;
@@ -8361,6 +8393,7 @@ v.sc = -20;
 "@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_C.left" = {
+"@MMK_R_Ef-cy" = -25;
 "@MMK_R_O.right" = -20;
 "@MMK_R_c.sc" = -20;
 "@MMK_R_guillemetleft" = -20;
@@ -8377,7 +8410,8 @@ v.sc = -10;
 "@MMK_R_Ustraight-cy" = -10;
 };
 "@MMK_L_De-cy" = {
-"@MMK_R_Che-cy" = -30;
+"@MMK_R_A.right" = 15;
+"@MMK_R_Che-cy" = -15;
 "@MMK_R_De-cy" = 30;
 "@MMK_R_Ef-cy" = -10;
 "@MMK_R_El-cy" = 30;
@@ -8414,9 +8448,11 @@ v.sc = -10;
 "@MMK_R_quoteleft" = -10;
 };
 "@MMK_L_E.left" = {
+"@MMK_R_U-cy" = 15;
 J = 60;
 };
 "@MMK_L_Ef-cy" = {
+"@MMK_R_A.right" = -20;
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_De-cy" = -15;
 "@MMK_R_Dje-cy" = -20;
@@ -8428,6 +8464,7 @@ J = 60;
 "@MMK_R_Komizje-cy" = -20;
 "@MMK_R_Lje-cy" = -20;
 "@MMK_R_Paren.right" = -20;
+"@MMK_R_T.right" = -65;
 "@MMK_R_U-cy" = -60;
 "@MMK_R_Ustraight-cy" = -30;
 "@MMK_R_Ze-cy" = -20;
@@ -8804,8 +8841,10 @@ J = 60;
 "@MMK_L_Hardsign-cy" = {
 "@MMK_R_Che-cy" = -80;
 "@MMK_R_Ef-cy" = -10;
+"@MMK_R_El-cy" = -15;
 "@MMK_R_Ia-cy" = -10;
 "@MMK_R_Paren.right" = -10;
+"@MMK_R_T.right" = -100;
 "@MMK_R_U-cy" = -20;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -30;
@@ -8861,7 +8900,9 @@ v.sc = -30;
 };
 "@MMK_L_O.left" = {
 "@MMK_R_A.right" = -20;
+"@MMK_R_De-cy" = -5;
 "@MMK_R_Dze-cy" = -10;
+"@MMK_R_El-cy" = -10;
 "@MMK_R_J.salt" = -30;
 "@MMK_R_T.right" = -30;
 "@MMK_R_V.right" = -10;
@@ -8881,8 +8922,13 @@ question = 30;
 };
 "@MMK_L_P.left" = {
 "@MMK_R_A.right" = -50;
+"@MMK_R_De-cy" = -5;
+"@MMK_R_El-cy" = -15;
 "@MMK_R_J.salt" = -120;
+"@MMK_R_U-cy" = -20;
 "@MMK_R_Z.right" = -10;
+"@MMK_R_Ze-cy" = -10;
+"@MMK_R_Zhe-cy" = -50;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -70;
 "@MMK_R_guillemetleft" = -10;
@@ -8892,10 +8938,16 @@ ampersand = -20;
 };
 "@MMK_L_T.left" = {
 "@MMK_R_A.right" = -50;
+"@MMK_R_Che-cy" = 15;
+"@MMK_R_De-cy" = -10;
+"@MMK_R_Ef-cy" = -55;
+"@MMK_R_El-cy" = -25;
 "@MMK_R_GRK_alpha.sc" = -30;
+"@MMK_R_Hardsign-cy.right" = 10;
 "@MMK_R_J.salt" = -90;
 "@MMK_R_O.right" = -20;
 "@MMK_R_T.right" = 10;
+"@MMK_R_Ze-cy" = 20;
 "@MMK_R_a.right" = -80;
 "@MMK_R_a.sc" = -30;
 "@MMK_R_ae.sc" = -30;
@@ -8927,11 +8979,12 @@ question = 20;
 "@MMK_R_underscore" = 0;
 };
 "@MMK_L_U-cy" = {
+"@MMK_R_A.right" = -10;
 "@MMK_R_Cheabkhasian-cy" = -20;
 "@MMK_R_De-cy" = -70;
 "@MMK_R_E-cy" = -10;
 "@MMK_R_Ef-cy" = -30;
-"@MMK_R_El-cy" = -80;
+"@MMK_R_El-cy" = -50;
 "@MMK_R_Ia-cy" = -30;
 "@MMK_R_J.salt" = -90;
 "@MMK_R_Komide-cy" = -70;
@@ -9080,6 +9133,7 @@ ampersand = -20;
 "@MMK_R_Ef-cy" = -40;
 "@MMK_R_Je-cy" = 20;
 "@MMK_R_Komide-cy" = -20;
+"@MMK_R_O.right" = -20;
 "@MMK_R_Paren.right" = 20;
 "@MMK_R_che-cy" = -30;
 "@MMK_R_eight" = -20;
@@ -9735,10 +9789,15 @@ x.sc = {
 };
 "84606D06-D269-45BD-896C-8402F9D7AD38" = {
 "@MMK_L_A.left" = {
+"@MMK_R_Che-cy" = -35;
+"@MMK_R_De-cy" = 15;
+"@MMK_R_Ef-cy" = -30;
+"@MMK_R_Hardsign-cy.right" = -50;
 "@MMK_R_O.right" = -20;
 "@MMK_R_T.right" = -50;
 "@MMK_R_V.right" = -10;
 "@MMK_R_Y.right" = -30;
+"@MMK_R_Ze-cy" = -10;
 "@MMK_R_quote.right" = -70;
 "@MMK_R_t.sc" = -30;
 "@MMK_R_w.sc" = -10;
@@ -9750,7 +9809,9 @@ v.sc = -20;
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_Cheabkhasian-cy" = -20;
 "@MMK_R_Ef-cy" = -10;
-"@MMK_R_Zhe-cy" = -10;
+"@MMK_R_U-cy" = -20;
+"@MMK_R_Ze-cy" = -20;
+"@MMK_R_Zhe-cy" = -15;
 "@MMK_R_che-cy" = -30;
 "@MMK_R_ha-cy" = -10;
 "@MMK_R_quote.right" = -20;
@@ -9759,6 +9820,7 @@ v.sc = -20;
 "@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_C.left" = {
+"@MMK_R_Ef-cy" = -25;
 "@MMK_R_O.right" = -20;
 "@MMK_R_c.sc" = -20;
 "@MMK_R_guillemetleft" = -20;
@@ -9780,7 +9842,10 @@ v.sc = -10;
 "@MMK_R_Ef-cy" = -10;
 "@MMK_R_El-cy" = 30;
 "@MMK_R_Je-cy" = 120;
+"@MMK_R_O.right" = -30;
 "@MMK_R_Paren.right" = 40;
+"@MMK_R_T.right" = -15;
+"@MMK_R_U-cy" = -20;
 "@MMK_R_Zhe-cy" = 10;
 "@MMK_R_che-cy" = -40;
 "@MMK_R_el-cy" = 40;
@@ -9812,9 +9877,11 @@ v.sc = -10;
 "@MMK_R_quoteleft" = -10;
 };
 "@MMK_L_E.left" = {
+"@MMK_R_U-cy" = 5;
 J = 60;
 };
 "@MMK_L_Ef-cy" = {
+"@MMK_R_A.right" = -20;
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_De-cy" = -15;
 "@MMK_R_Dje-cy" = -20;
@@ -9826,6 +9893,7 @@ J = 60;
 "@MMK_R_Komizje-cy" = -20;
 "@MMK_R_Lje-cy" = -20;
 "@MMK_R_Paren.right" = -20;
+"@MMK_R_T.right" = -75;
 "@MMK_R_U-cy" = -50;
 "@MMK_R_Ustraight-cy" = -30;
 "@MMK_R_Ze-cy" = -20;
@@ -10202,8 +10270,10 @@ J = 60;
 "@MMK_L_Hardsign-cy" = {
 "@MMK_R_Che-cy" = -80;
 "@MMK_R_Ef-cy" = -10;
+"@MMK_R_El-cy" = -10;
 "@MMK_R_Ia-cy" = -10;
 "@MMK_R_Paren.right" = -10;
+"@MMK_R_T.right" = -111;
 "@MMK_R_U-cy" = -20;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -30;
@@ -10259,7 +10329,9 @@ v.sc = -30;
 };
 "@MMK_L_O.left" = {
 "@MMK_R_A.right" = -20;
+"@MMK_R_De-cy" = -20;
 "@MMK_R_Dze-cy" = -10;
+"@MMK_R_El-cy" = -10;
 "@MMK_R_J.salt" = -20;
 "@MMK_R_T.right" = -30;
 "@MMK_R_V.right" = -10;
@@ -10279,8 +10351,13 @@ question = 30;
 };
 "@MMK_L_P.left" = {
 "@MMK_R_A.right" = -50;
+"@MMK_R_De-cy" = -35;
+"@MMK_R_El-cy" = -30;
 "@MMK_R_J.salt" = -100;
+"@MMK_R_U-cy" = -50;
 "@MMK_R_Z.right" = -10;
+"@MMK_R_Ze-cy" = -35;
+"@MMK_R_Zhe-cy" = -60;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -70;
 "@MMK_R_guillemetleft" = -10;
@@ -10290,10 +10367,17 @@ ampersand = -20;
 };
 "@MMK_L_T.left" = {
 "@MMK_R_A.right" = -50;
+"@MMK_R_Che-cy" = 10;
+"@MMK_R_De-cy" = -30;
+"@MMK_R_Ef-cy" = -25;
+"@MMK_R_El-cy" = -30;
 "@MMK_R_GRK_alpha.sc" = -30;
+"@MMK_R_Hardsign-cy.right" = 5;
+"@MMK_R_Ia-cy" = -15;
 "@MMK_R_J.salt" = -90;
 "@MMK_R_O.right" = -20;
 "@MMK_R_T.right" = 10;
+"@MMK_R_Ze-cy" = 10;
 "@MMK_R_a.right" = -80;
 "@MMK_R_a.sc" = -30;
 "@MMK_R_ae.sc" = -30;
@@ -10325,11 +10409,12 @@ question = 20;
 "@MMK_R_underscore" = 0;
 };
 "@MMK_L_U-cy" = {
+"@MMK_R_A.right" = -10;
 "@MMK_R_Cheabkhasian-cy" = -20;
 "@MMK_R_De-cy" = -70;
 "@MMK_R_E-cy" = -10;
 "@MMK_R_Ef-cy" = -30;
-"@MMK_R_El-cy" = -70;
+"@MMK_R_El-cy" = -30;
 "@MMK_R_Ia-cy" = -30;
 "@MMK_R_J.salt" = -90;
 "@MMK_R_Komide-cy" = -70;
@@ -10479,6 +10564,7 @@ ampersand = -20;
 "@MMK_R_Ef-cy" = -40;
 "@MMK_R_Je-cy" = 20;
 "@MMK_R_Komide-cy" = -20;
+"@MMK_R_O.right" = -20;
 "@MMK_R_Paren.right" = 20;
 "@MMK_R_che-cy" = -30;
 "@MMK_R_eight" = -20;
@@ -11141,6 +11227,10 @@ x.sc = {
 };
 "891911EE-97A3-4583-AC34-B57874F49FBA" = {
 "@MMK_L_A.left" = {
+"@MMK_R_Che-cy" = -25;
+"@MMK_R_Ef-cy" = -15;
+"@MMK_R_El-cy" = 30;
+"@MMK_R_Hardsign-cy.right" = -20;
 "@MMK_R_J.salt" = 10;
 "@MMK_R_O.right" = -10;
 "@MMK_R_T.right" = -20;
@@ -11159,6 +11249,8 @@ v.sc = -20;
 "@MMK_R_Che-cy" = -25;
 "@MMK_R_Cheabkhasian-cy" = -20;
 "@MMK_R_U-cy" = -5;
+"@MMK_R_Ze-cy" = -20;
+"@MMK_R_Zhe-cy" = -20;
 "@MMK_R_che-cy" = -20;
 "@MMK_R_colon" = -10;
 "@MMK_R_eight" = 10;
@@ -11169,6 +11261,7 @@ v.sc = -20;
 "@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_C.left" = {
+"@MMK_R_Ef-cy" = -25;
 "@MMK_R_O.right" = -25;
 "@MMK_R_a.sc" = 20;
 "@MMK_R_c.sc" = -30;
@@ -11185,14 +11278,15 @@ v.sc = -10;
 "@MMK_R_Ustraight-cy" = -10;
 };
 "@MMK_L_De-cy" = {
-"@MMK_R_Che-cy" = -35;
+"@MMK_R_A.right" = 15;
+"@MMK_R_Che-cy" = -20;
 "@MMK_R_De-cy" = 30;
 "@MMK_R_Ef-cy" = -10;
 "@MMK_R_El-cy" = 30;
 "@MMK_R_Ia-cy" = 5;
 "@MMK_R_Je-cy" = 100;
 "@MMK_R_Paren.right" = 40;
-"@MMK_R_U-cy" = 10;
+"@MMK_R_U-cy" = 5;
 "@MMK_R_Zhe-cy" = 10;
 "@MMK_R_el-cy" = 20;
 "@MMK_R_komizje-cy" = -20;
@@ -11222,10 +11316,12 @@ v.sc = -10;
 "@MMK_R_komizje-cy" = -20;
 };
 "@MMK_L_E.left" = {
+"@MMK_R_U-cy" = 5;
 "@MMK_R_c.sc" = -10;
 J = 30;
 };
 "@MMK_L_Ef-cy" = {
+"@MMK_R_A.right" = -5;
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_De-cy" = -25;
 "@MMK_R_Dje-cy" = -30;
@@ -11236,6 +11332,7 @@ J = 30;
 "@MMK_R_Komizje-cy" = -20;
 "@MMK_R_Lje-cy" = -20;
 "@MMK_R_Paren.right" = -20;
+"@MMK_R_T.right" = -65;
 "@MMK_R_U-cy" = -30;
 "@MMK_R_Ustraight-cy" = -30;
 "@MMK_R_Ze-cy" = -20;
@@ -11612,7 +11709,9 @@ J = 30;
 };
 "@MMK_L_Hardsign-cy" = {
 "@MMK_R_Che-cy" = -70;
+"@MMK_R_El-cy" = -10;
 "@MMK_R_Ia-cy" = -10;
+"@MMK_R_T.right" = -65;
 "@MMK_R_U-cy" = -10;
 "@MMK_R_Ze-cy" = -10;
 "@MMK_R_che-cy" = -10;
@@ -11669,7 +11768,9 @@ v.sc = -10;
 v.sc = -30;
 };
 "@MMK_L_O.left" = {
+"@MMK_R_De-cy" = -45;
 "@MMK_R_Dze-cy" = -10;
+"@MMK_R_El-cy" = -10;
 "@MMK_R_J.salt" = -20;
 "@MMK_R_T.right" = -20;
 "@MMK_R_V.right" = -10;
@@ -11693,8 +11794,13 @@ question = 50;
 };
 "@MMK_L_P.left" = {
 "@MMK_R_A.right" = -15;
+"@MMK_R_De-cy" = -30;
+"@MMK_R_El-cy" = -15;
 "@MMK_R_J.salt" = -80;
+"@MMK_R_U-cy" = -15;
 "@MMK_R_Z.right" = -10;
+"@MMK_R_Ze-cy" = -15;
+"@MMK_R_Zhe-cy" = -35;
 "@MMK_R_a.sc" = -20;
 "@MMK_R_ae.sc" = -40;
 "@MMK_R_guillemetleft" = -10;
@@ -11704,10 +11810,16 @@ X = -20;
 "@MMK_L_T.left" = {
 "@MMK_R_A.right" = -20;
 "@MMK_R_AE" = -10;
+"@MMK_R_Che-cy" = 5;
+"@MMK_R_De-cy" = -20;
+"@MMK_R_Ef-cy" = -60;
+"@MMK_R_El-cy" = -20;
 "@MMK_R_GRK_alpha.sc" = -30;
+"@MMK_R_Hardsign-cy.right" = 10;
 "@MMK_R_J.salt" = -50;
 "@MMK_R_O.right" = -10;
 "@MMK_R_T.right" = 10;
+"@MMK_R_Ze-cy" = 15;
 "@MMK_R_a.right" = -40;
 "@MMK_R_a.sc" = -30;
 "@MMK_R_ae.sc" = -30;
@@ -11744,7 +11856,7 @@ x.sc = -20;
 "@MMK_R_Cheabkhasian-cy" = -20;
 "@MMK_R_De-cy" = -50;
 "@MMK_R_Ef-cy" = -10;
-"@MMK_R_El-cy" = -50;
+"@MMK_R_El-cy" = -30;
 "@MMK_R_Ia-cy" = -10;
 "@MMK_R_J.salt" = -60;
 "@MMK_R_Komide-cy" = -30;
@@ -11892,6 +12004,7 @@ ampersand = -20;
 "@MMK_R_E-cy" = -10;
 "@MMK_R_Ef-cy" = -30;
 "@MMK_R_El-cy" = 10;
+"@MMK_R_O.right" = -5;
 "@MMK_R_che-cy" = -20;
 "@MMK_R_four" = -10;
 "@MMK_R_guillemetleft" = -20;
@@ -12498,6 +12611,10 @@ x.sc = {
 };
 "A849C433-1DA2-4174-AEA9-F403839AA1E5" = {
 "@MMK_L_A.left" = {
+"@MMK_R_Che-cy" = -27;
+"@MMK_R_De-cy" = 10;
+"@MMK_R_Ef-cy" = -15;
+"@MMK_R_Hardsign-cy.right" = -20;
 "@MMK_R_J.salt" = 10;
 "@MMK_R_O.right" = -10;
 "@MMK_R_T.right" = -20;
@@ -12515,7 +12632,9 @@ v.sc = -20;
 "@MMK_L_Be-cy" = {
 "@MMK_R_Che-cy" = -25;
 "@MMK_R_Cheabkhasian-cy" = -20;
-"@MMK_R_U-cy" = -5;
+"@MMK_R_U-cy" = -15;
+"@MMK_R_Ze-cy" = -15;
+"@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -20;
 "@MMK_R_colon" = -10;
 "@MMK_R_eight" = 10;
@@ -12526,6 +12645,7 @@ v.sc = -20;
 "@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_C.left" = {
+"@MMK_R_Ef-cy" = -25;
 "@MMK_R_O.right" = -25;
 "@MMK_R_a.sc" = 20;
 "@MMK_R_c.sc" = -30;
@@ -12542,14 +12662,15 @@ v.sc = -10;
 "@MMK_R_Ustraight-cy" = -10;
 };
 "@MMK_L_De-cy" = {
-"@MMK_R_Che-cy" = -35;
-"@MMK_R_De-cy" = 30;
+"@MMK_R_A.right" = 15;
+"@MMK_R_Che-cy" = -15;
+"@MMK_R_De-cy" = 40;
 "@MMK_R_Ef-cy" = -10;
 "@MMK_R_El-cy" = 30;
 "@MMK_R_Ia-cy" = 5;
 "@MMK_R_Je-cy" = 100;
 "@MMK_R_Paren.right" = 40;
-"@MMK_R_U-cy" = 10;
+"@MMK_R_U-cy" = 5;
 "@MMK_R_Zhe-cy" = 10;
 "@MMK_R_el-cy" = 20;
 "@MMK_R_komizje-cy" = -20;
@@ -12579,10 +12700,13 @@ v.sc = -10;
 "@MMK_R_komizje-cy" = -20;
 };
 "@MMK_L_E.left" = {
+"@MMK_R_El-cy" = -10;
+"@MMK_R_U-cy" = 5;
 "@MMK_R_c.sc" = -10;
 J = 30;
 };
 "@MMK_L_Ef-cy" = {
+"@MMK_R_A.right" = -10;
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_De-cy" = -25;
 "@MMK_R_Dje-cy" = -30;
@@ -12593,6 +12717,7 @@ J = 30;
 "@MMK_R_Komizje-cy" = -20;
 "@MMK_R_Lje-cy" = -20;
 "@MMK_R_Paren.right" = -20;
+"@MMK_R_T.right" = -50;
 "@MMK_R_U-cy" = -30;
 "@MMK_R_Ustraight-cy" = -30;
 "@MMK_R_Ze-cy" = -20;
@@ -12969,7 +13094,9 @@ J = 30;
 };
 "@MMK_L_Hardsign-cy" = {
 "@MMK_R_Che-cy" = -70;
+"@MMK_R_El-cy" = -10;
 "@MMK_R_Ia-cy" = -10;
+"@MMK_R_T.right" = -50;
 "@MMK_R_U-cy" = -10;
 "@MMK_R_Ze-cy" = -10;
 "@MMK_R_che-cy" = -10;
@@ -13026,7 +13153,9 @@ v.sc = -10;
 v.sc = -30;
 };
 "@MMK_L_O.left" = {
+"@MMK_R_De-cy" = -25;
 "@MMK_R_Dze-cy" = -10;
+"@MMK_R_El-cy" = -10;
 "@MMK_R_J.salt" = -40;
 "@MMK_R_T.right" = -20;
 "@MMK_R_V.right" = -10;
@@ -13050,8 +13179,13 @@ question = 50;
 };
 "@MMK_L_P.left" = {
 "@MMK_R_A.right" = -15;
+"@MMK_R_De-cy" = -15;
+"@MMK_R_El-cy" = -25;
 "@MMK_R_J.salt" = -80;
+"@MMK_R_U-cy" = -20;
 "@MMK_R_Z.right" = -10;
+"@MMK_R_Ze-cy" = -10;
+"@MMK_R_Zhe-cy" = -40;
 "@MMK_R_a.sc" = -20;
 "@MMK_R_ae.sc" = -40;
 "@MMK_R_guillemetleft" = -10;
@@ -13061,10 +13195,16 @@ X = -20;
 "@MMK_L_T.left" = {
 "@MMK_R_A.right" = -20;
 "@MMK_R_AE" = -10;
+"@MMK_R_Che-cy" = 15;
+"@MMK_R_De-cy" = -15;
+"@MMK_R_Ef-cy" = -40;
+"@MMK_R_El-cy" = -20;
 "@MMK_R_GRK_alpha.sc" = -30;
+"@MMK_R_Hardsign-cy.right" = 10;
 "@MMK_R_J.salt" = -70;
 "@MMK_R_O.right" = -10;
 "@MMK_R_T.right" = 10;
+"@MMK_R_Ze-cy" = 20;
 "@MMK_R_a.right" = -40;
 "@MMK_R_a.sc" = -30;
 "@MMK_R_ae.sc" = -30;
@@ -13098,10 +13238,11 @@ x.sc = -20;
 "@MMK_R_seven" = -50;
 };
 "@MMK_L_U-cy" = {
+"@MMK_R_A.right" = -5;
 "@MMK_R_Cheabkhasian-cy" = -20;
 "@MMK_R_De-cy" = -50;
 "@MMK_R_Ef-cy" = -10;
-"@MMK_R_El-cy" = -50;
+"@MMK_R_El-cy" = -40;
 "@MMK_R_Ia-cy" = -10;
 "@MMK_R_J.salt" = -60;
 "@MMK_R_Komide-cy" = -30;
@@ -13249,6 +13390,7 @@ ampersand = -20;
 "@MMK_R_E-cy" = -10;
 "@MMK_R_Ef-cy" = -30;
 "@MMK_R_El-cy" = 10;
+"@MMK_R_O.right" = -20;
 "@MMK_R_che-cy" = -20;
 "@MMK_R_four" = -10;
 "@MMK_R_guillemetleft" = -20;
@@ -13859,10 +14001,15 @@ x.sc = {
 };
 "1C9FFC3E-B033-49C1-8526-F3CD51FE3A6C" = {
 "@MMK_L_A.left" = {
+"@MMK_R_Che-cy" = -40;
+"@MMK_R_De-cy" = 15;
+"@MMK_R_Ef-cy" = -10;
+"@MMK_R_Hardsign-cy.right" = -20;
 "@MMK_R_O.right" = -10;
 "@MMK_R_T.right" = -20;
 "@MMK_R_V.right" = -10;
 "@MMK_R_Y.right" = -25;
+"@MMK_R_Ze-cy" = -10;
 "@MMK_R_c.sc" = -10;
 "@MMK_R_j.sc" = 10;
 "@MMK_R_quote.right" = -50;
@@ -13875,7 +14022,9 @@ v.sc = -20;
 "@MMK_L_Be-cy" = {
 "@MMK_R_Che-cy" = -25;
 "@MMK_R_Cheabkhasian-cy" = -20;
-"@MMK_R_U-cy" = -5;
+"@MMK_R_U-cy" = -15;
+"@MMK_R_Ze-cy" = -20;
+"@MMK_R_Zhe-cy" = -15;
 "@MMK_R_che-cy" = -20;
 "@MMK_R_colon" = -10;
 "@MMK_R_eight" = 10;
@@ -13886,6 +14035,7 @@ v.sc = -20;
 "@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_C.left" = {
+"@MMK_R_Ef-cy" = -25;
 "@MMK_R_O.right" = -25;
 "@MMK_R_a.sc" = 20;
 "@MMK_R_c.sc" = -30;
@@ -13902,13 +14052,15 @@ v.sc = -10;
 "@MMK_R_Ustraight-cy" = -10;
 };
 "@MMK_L_De-cy" = {
-"@MMK_R_Che-cy" = -35;
-"@MMK_R_De-cy" = 30;
+"@MMK_R_A.right" = 15;
+"@MMK_R_Che-cy" = -20;
+"@MMK_R_De-cy" = 40;
 "@MMK_R_Ef-cy" = -10;
 "@MMK_R_El-cy" = 30;
 "@MMK_R_Ia-cy" = 5;
 "@MMK_R_Je-cy" = 100;
 "@MMK_R_Paren.right" = 40;
+"@MMK_R_T.right" = -10;
 "@MMK_R_U-cy" = 10;
 "@MMK_R_Zhe-cy" = 10;
 "@MMK_R_el-cy" = 20;
@@ -13939,10 +14091,13 @@ v.sc = -10;
 "@MMK_R_komizje-cy" = -20;
 };
 "@MMK_L_E.left" = {
+"@MMK_R_El-cy" = -5;
+"@MMK_R_U-cy" = 5;
 "@MMK_R_c.sc" = -10;
 J = 30;
 };
 "@MMK_L_Ef-cy" = {
+"@MMK_R_A.right" = -5;
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_De-cy" = -25;
 "@MMK_R_Dje-cy" = -30;
@@ -13953,6 +14108,7 @@ J = 30;
 "@MMK_R_Komizje-cy" = -20;
 "@MMK_R_Lje-cy" = -20;
 "@MMK_R_Paren.right" = -20;
+"@MMK_R_T.right" = -40;
 "@MMK_R_U-cy" = -30;
 "@MMK_R_Ustraight-cy" = -30;
 "@MMK_R_Ze-cy" = -20;
@@ -14330,6 +14486,7 @@ J = 30;
 "@MMK_L_Hardsign-cy" = {
 "@MMK_R_Che-cy" = -70;
 "@MMK_R_Ia-cy" = -10;
+"@MMK_R_T.right" = -60;
 "@MMK_R_U-cy" = -10;
 "@MMK_R_Ze-cy" = -10;
 "@MMK_R_che-cy" = -10;
@@ -14386,7 +14543,9 @@ v.sc = -10;
 v.sc = -30;
 };
 "@MMK_L_O.left" = {
+"@MMK_R_De-cy" = -25;
 "@MMK_R_Dze-cy" = -10;
+"@MMK_R_El-cy" = -10;
 "@MMK_R_J.salt" = -30;
 "@MMK_R_T.right" = -20;
 "@MMK_R_V.right" = -10;
@@ -14410,8 +14569,13 @@ question = 50;
 };
 "@MMK_L_P.left" = {
 "@MMK_R_A.right" = -15;
+"@MMK_R_De-cy" = -30;
+"@MMK_R_El-cy" = -20;
 "@MMK_R_J.salt" = -80;
+"@MMK_R_U-cy" = -15;
 "@MMK_R_Z.right" = -10;
+"@MMK_R_Ze-cy" = -5;
+"@MMK_R_Zhe-cy" = -25;
 "@MMK_R_a.sc" = -20;
 "@MMK_R_ae.sc" = -40;
 "@MMK_R_guillemetleft" = -10;
@@ -14421,10 +14585,16 @@ X = -20;
 "@MMK_L_T.left" = {
 "@MMK_R_A.right" = -20;
 "@MMK_R_AE" = -10;
+"@MMK_R_Che-cy" = 20;
+"@MMK_R_De-cy" = -30;
+"@MMK_R_Ef-cy" = -30;
+"@MMK_R_El-cy" = -25;
 "@MMK_R_GRK_alpha.sc" = -30;
+"@MMK_R_Hardsign-cy.right" = 10;
 "@MMK_R_J.salt" = -70;
 "@MMK_R_O.right" = -10;
 "@MMK_R_T.right" = 10;
+"@MMK_R_Ze-cy" = 20;
 "@MMK_R_a.right" = -40;
 "@MMK_R_a.sc" = -30;
 "@MMK_R_ae.sc" = -30;
@@ -14458,6 +14628,7 @@ x.sc = -20;
 "@MMK_R_seven" = -50;
 };
 "@MMK_L_U-cy" = {
+"@MMK_R_A.right" = -10;
 "@MMK_R_Cheabkhasian-cy" = -20;
 "@MMK_R_De-cy" = -50;
 "@MMK_R_Ef-cy" = -10;
@@ -14609,6 +14780,7 @@ ampersand = -20;
 "@MMK_R_E-cy" = -10;
 "@MMK_R_Ef-cy" = -30;
 "@MMK_R_El-cy" = 10;
+"@MMK_R_O.right" = -30;
 "@MMK_R_che-cy" = -20;
 "@MMK_R_four" = -10;
 "@MMK_R_guillemetleft" = -20;
